add singleConversation to service
