# src/main/java/com/example/messageservice/domain/api/MessageServiceRepo.java
@@ -8,4 +8,5 @@ import java.util.List;
 public interface MessageServiceRepo {
     List<Message> getAllMessages(User user);
     void sendMessage(Message message);
+    List<Message> getSingleConversation(User user, String usernameConversation);
 }
