# src/main/java/com/example/messageservice/domain/model/messanger/GetSingleConversationRequest.java
@@ -1,0 +1,14 @@
+package com.example.messageservice.domain.model.messanger;
+
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+@Data
+@Builder(toBuilder = true)
+@AllArgsConstructor
+@NoArgsConstructor
+public class GetSingleConversationRequest {
+    String usernameConversation;
+}
