# src/main/java/com/example/messageservice/infrastructure/service/impl/MessageServiceRepoImpl.java
@@ -6,6 +6,7 @@ import com.example.messageservice.domain.model.User;
 import com.example.messageservice.infrastructure.repository.MessageRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 
@@ -16,11 +17,18 @@ public class MessageServiceRepoImpl  implements MessageServiceRepo {
 
     @Override
     public List<Message> getAllMessages(User user) {
-        return messageRepository.findMessagesBySenderAndReceiverIgnoreCase(user.getUsername(), user.getUsername());
+        return messageRepository.findMessagesBySenderAndReceiver(user.getUsername(), user.getUsername());
     }
 
     @Override
     public void sendMessage(Message message) {
         messageRepository.save(message);
+    }
+
+    @Override
+    @Transactional
+    public List<Message> getSingleConversation(User user, String usernameConversation){
+        messageRepository.updateRead(usernameConversation ,user.getUsername());
+        return messageRepository.findSingleConversation(user.getUsername(), usernameConversation);
     }
 }
