# src/main/resources/openapi3/Swagger_Servizio_Messaggistica.yaml
@@ -132,3 +132,57 @@ paths:
                     example: "Messaggio inviato con successo"
         '401':
           description: Accesso non autorizzato (Token non valido)
+
+  /conversation:
+    post:
+      tags:
+        - Servizio Messaggistica
+      summary: Recupero conversazione di un singolo utente
+      description: Recupera la lista dei messaggi di un singolo utente (username)
+      operationId: retrieveConversation
+      security: #Richiamiamo il bearerAuth del component security
+        - bearerAuth: [ ]
+      requestBody:
+        description: Username utente della conversazione
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                usernameConversation:
+                  type: string
+                  example: "Asuka"
+      responses:
+        '200':
+          description: Operazione completa
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    id:
+                      type: integer
+                      example: 1
+                    content:
+                      type: string
+                      example: "Baka Shinji"
+                    username_sender:
+                      type: string
+                      example: "Asuka"
+                    username_receiver:
+                      type: string
+                      example: "Shinji"
+                    createdAt:
+                      type: string
+                      format: date-time
+                      example: "2025-01-20T09:00:00"
+                    isRead:
+                      type: boolean
+                      example: true
+        '204':
+          description: Messaggi non trovati per l'userId fornito (utente non esistente) #return lista vuota
+        '401':
+          description: Accesso non autorizzato (Token non valido)
